Fix alignment and remove addressbook selector if only one

--- a/css/Properties/Properties.scss
+++ b/css/Properties/Properties.scss
@@ -52,8 +52,7 @@ $property-value-max-width: 250px;
 	// property label or multiselect within row
 	&__label,
 	&__label.multiselect {
-		margin: $grid-input-margin 5px $grid-input-margin 0;
-		padding: $grid-input-padding 0;
+		margin: $grid-input-margin 5px $grid-input-margin 0 !important; // override multiselect
 		flex: 1 0; // min width is 60px, let's grow until 120px
 		height: $grid-input-height-with-margin;
 		width: $property-label-min-width;
